changed cleaning file and updated plots

--- a/unused/data_manipulation_and_cleaning.ipynb
+++ b/unused/data_manipulation_and_cleaning.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "14                        2                   2.8  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,12 +427,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rename columns to be consistent\n",
-    "text_transform_df = df.replace(regex=r'---|\\?',value=0)\n",
+    "text_transform_df = df.replace(regex=r'---|\\?',value=0).replace('N.A.',value='0')\n",
     "text_transform_df = text_transform_df.rename(columns=lambda x: column_rename(x))"
    ]
   },
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,11 +511,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_transform_df['lower_single_house_percent_w'] = num_transform_df.lower_single_house_women\t / num_transform_df.lower_single_house_seats\n",
+    "num_transform_df['lower_single_house_percent_w'] = num_transform_df.lower_single_house_women / num_transform_df.lower_single_house_seats\n",
     "num_transform_df['upper_single_house_percent_w'] = num_transform_df.upper_house_senate_women / num_transform_df.upper_house_senate_seats"
    ]
   },
@@ -529,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -549,7 +549,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "[10111 rows x 11 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,45 +851,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save file to csv for use in analysis & visualizations\n",
     "drop_dupp_add_year.to_csv('./data/world_data_final.csv', index=False)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In addition to having the percent women in parliments for each country for each year, it is helpful to have the data for only 2022. Addtionally, this 2022 dataframe will be converted from wide to long, with a column indicating whether the data is from the lower or upper house.  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# convert to datetime\n",
-    "drop_dupp_add_year['lower_single_house_elections'] = pd.to_datetime(drop_dupp_add_year['lower_single_house_elections'])\n",
-    "drop_dupp_add_year['upper_house_senate_elections_year'] = pd.to_datetime(drop_dupp_add_year['upper_house_senate_elections'])\n",
-    "\n",
-    "# get 2022 data\n",
-    "women2022 = drop_dupp_add_year[(drop_dupp_add_year['lower_single_house_elections'].dt.year== 2022)|(drop_dupp_add_year['upper_house_senate_elections_year'].dt.year== 2022)]\n",
-    "\n",
-    "# convert to percents\n",
-    "pd.options.mode.chained_assignment = None\n",
-    "women2022['lower_single_house_percent_w'] = round(women2022.loc[:,'lower_single_house_percent_w']*100,2)\n",
-    "women2022['upper_single_house_percent_w'] = round(women2022.loc[:,'upper_single_house_percent_w']*100,2)\n",
-    "\n",
-    "# melt dataframe \n",
-    "women_melted = women2022.reset_index().melt(id_vars=['country'],value_vars=['lower_single_house_percent_w','upper_single_house_percent_w'],value_name='Percent Women',var_name='House')\n",
-    "\n",
-    "# save to csv\n",
-    "women_melted.to_csv('data/world_data_2022.csv',index=False)"
    ]
   },
   {
@@ -910,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -1246,7 +1213,7 @@
        "[167 rows x 19 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1269,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1279,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1289,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1315,7 +1282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1465,7 @@
        "Hybrid regime                 36  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1517,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1872,7 +1839,7 @@
        "[73 rows x 20 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1881,119 +1848,6 @@
     "democracies = country_scores[country_scores['five_year_mean'] > 6]\n",
     "print('Number of democracies in dataset: ' +  str(len(set(democracies['country']))))\n",
     "democracies"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Joining the two datasets together"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In order to run the correlation and produce some of the visualzations, the datasets need to be joined together into one dataframe."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Read in democracy index data\n",
-    "democracy_index = pd.read_csv('data/democracy_index_data.csv')\n",
-    "# Read in the percent women in parliments data\n",
-    "women_in_parliments =  pd.read_csv('data/world_data_final.csv')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First the Democracy Index dataset needs to be converted from wide to long. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Get list of years to be used to melt the dataframe\n",
-    "years_list = [str(year) for year in range(2010,2023)]\n",
-    "years_list.insert(0,'2008')\n",
-    "years_list.insert(0,'2006')\n",
-    "# Melt dataframe from wide to long\n",
-    "democracy_index_melted = democracy_index.melt(id_vars=['region','2022_rank','country','regime_type','five_year_mean'],value_vars=years_list,var_name='year',value_name='democracy_index_score')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Because many countries do not have two legislative bodies, there is significantly more missing data for the upper house. For this reason, we will focus on the lower house data only. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "\"['upper_single_house_elections_year'] not in index\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[24], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Get only lower house and rename columns\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m women_lower_house \u001b[39m=\u001b[39m women_in_parliments[[\u001b[39m'\u001b[39;49m\u001b[39mcountry\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mlower_single_house_elections_year\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mlower_single_house_percent_w\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mupper_single_house_elections_year\u001b[39;49m\u001b[39m'\u001b[39;49m,\u001b[39m'\u001b[39;49m\u001b[39mupper_single_house_percent_w\u001b[39;49m\u001b[39m'\u001b[39;49m]]\n\u001b[0;32m      3\u001b[0m women_lower_house \u001b[39m=\u001b[39m women_lower_house\u001b[39m.\u001b[39mrename({\u001b[39m'\u001b[39m\u001b[39mlower_or_single_house_elections_year\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39myear\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m'\u001b[39m\u001b[39mlower_single_house_percent_w\u001b[39m\u001b[39m'\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mpercent_W\u001b[39m\u001b[39m'\u001b[39m},axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\Rebecca\\.conda\\envs\\milestone1\\lib\\site-packages\\pandas\\core\\frame.py:3811\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3809\u001b[0m     \u001b[39mif\u001b[39;00m is_iterator(key):\n\u001b[0;32m   3810\u001b[0m         key \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(key)\n\u001b[1;32m-> 3811\u001b[0m     indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49m_get_indexer_strict(key, \u001b[39m\"\u001b[39;49m\u001b[39mcolumns\u001b[39;49m\u001b[39m\"\u001b[39;49m)[\u001b[39m1\u001b[39m]\n\u001b[0;32m   3813\u001b[0m \u001b[39m# take() does not accept boolean indexers\u001b[39;00m\n\u001b[0;32m   3814\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mgetattr\u001b[39m(indexer, \u001b[39m\"\u001b[39m\u001b[39mdtype\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m) \u001b[39m==\u001b[39m \u001b[39mbool\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\Rebecca\\.conda\\envs\\milestone1\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6113\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[1;34m(self, key, axis_name)\u001b[0m\n\u001b[0;32m   6110\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m   6111\u001b[0m     keyarr, indexer, new_indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reindex_non_unique(keyarr)\n\u001b[1;32m-> 6113\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_raise_if_missing(keyarr, indexer, axis_name)\n\u001b[0;32m   6115\u001b[0m keyarr \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtake(indexer)\n\u001b[0;32m   6116\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(key, Index):\n\u001b[0;32m   6117\u001b[0m     \u001b[39m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Rebecca\\.conda\\envs\\milestone1\\lib\\site-packages\\pandas\\core\\indexes\\base.py:6176\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[1;34m(self, key, indexer, axis_name)\u001b[0m\n\u001b[0;32m   6173\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mNone of [\u001b[39m\u001b[39m{\u001b[39;00mkey\u001b[39m}\u001b[39;00m\u001b[39m] are in the [\u001b[39m\u001b[39m{\u001b[39;00maxis_name\u001b[39m}\u001b[39;00m\u001b[39m]\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m   6175\u001b[0m not_found \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[39m.\u001b[39mnonzero()[\u001b[39m0\u001b[39m]]\u001b[39m.\u001b[39munique())\n\u001b[1;32m-> 6176\u001b[0m \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mnot_found\u001b[39m}\u001b[39;00m\u001b[39m not in index\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mKeyError\u001b[0m: \"['upper_single_house_elections_year'] not in index\""
-     ]
-    }
-   ],
-   "source": [
-    "# Get only lower house and rename columns\n",
-    "women_lower_house = women_in_parliments[['country','lower_single_house_elections_year','lower_single_house_percent_w','upper_single_house_elections_year','upper_single_house_percent_w']]\n",
-    "women_lower_house = women_lower_house.rename({'lower_or_single_house_elections_year':'year','lower_single_house_percent_w':'percent_W'},axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Join the two datasets on year and country\n",
-    "joined_df = democracy_index_melted.merge(women_lower_house, on=['country','year'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "joined_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Saving dataset to csv for use in analysis\n",
-    "joined_df.to_csv('data/joined_dataset.csv',index=False)"
    ]
   }
  ],
