double checking markdown

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -63,11 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "^C\n"
+     ]
+    }
+   ],
    "source": [
-    "# This line uses the script to pull in the data from the IPU website and save each file to csv in the data/world_data/ folder. \n",
+    "# This line uses the script to pull in the data from the IPU website and save each file to a csv in the data/world_data/ folder. \n",
     "# It is commented out because we already ran this script and want to avoid unecessarily pulling from their website\n",
     "#!python scripts\\obtaining_world_data.py"
    ]
@@ -507,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We then checked that the columns are all the correct format."
+    "We then checked that the columns are all in the correct format."
    ]
   },
   {
