--- a/data_visualizations.ipynb
+++ b/data_visualizations.ipynb
@@ -19,12 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "#importing in libraries\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import glob\n",
@@ -52,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Analysis 1: Exploring democracy index score variables and women in government variables thorugh box plots and histograms"
+    "## Analysis 1: Exploring democracy index score variables and women in government variables through box plots and histograms"
    ]
   },
   {
@@ -79,7 +78,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To obtain context about the variables we are exploring in our analysis, we created boxplots and histograms. This allowed us to visualization their distributions as a starting point."
+    "To obtain context about the variables we are exploring in our analysis, we created boxplots and histograms. This allowed us to visualize their distributions as a starting point."
    ]
   },
   {
@@ -1288,12 +1287,12 @@
    "source": [
     "### Histogram of women in government data\n",
     "\n",
-    "In addition to having the percent women in parliments for each country for each year, it is helpful to have the data for only 2022. Addtionally, this 2022 dataframe will be converted from wide to long, with a column indicating whether the data is from the lower or upper house.  "
+    "In addition to having the percent women in parliments for each country for each year, it is helpful to look at the most recent data (only 2022). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1307,16 +1306,16 @@
     "# get 2022 data\n",
     "women2022 = women[(women['lower_single_house_elections'].dt.year== 2022)|(women['upper_house_senate_elections_year'].dt.year== 2022)]\n",
     "\n",
-    "# melt dataframe\n",
+    "# melt dataframe and rename columns (to look better in the visualization)\n",
     "women_melted = women2022.reset_index().melt(id_vars=['country'],value_vars=['lower_single_house_percent_w','upper_house_senate_percent_w'],value_name='Percent Women',var_name='House')\n",
     "\n",
-    "# convert to percents\n",
+    "# convert to percents (to look better in the visualization)\n",
     "women_melted['Percent Women'] = round(women_melted.loc[:,'Percent Women']*100,2).astype(float)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2942,9 +2941,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'warnings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[2], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# comparing using January 2022\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \n\u001b[0;32m      3\u001b[0m \u001b[39m#ignore warnings\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m warnings\u001b[39m.\u001b[39mfilterwarnings(\u001b[39m'\u001b[39m\u001b[39mignore\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m \u001b[39m# read in necessary data and performing data cleaning\u001b[39;00m\n\u001b[0;32m      7\u001b[0m jan_22_data_full \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m\"\u001b[39m\u001b[39mdata/world_data/wd_1_2022.csv\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'warnings' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# comparing using January 2022\n",
     "\n",
@@ -3078,7 +3089,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're not seeing a clear pattern emerge from this visualization. Let's do a correlation to quantify this relationship at the world level"
+    "We're not seeing a clear pattern emerge from this visualization. Let's do a correlation to quantify this relationship at the world level."
    ]
   },
   {
@@ -3088,12 +3099,12 @@
    "source": [
     "### Correlation between percent women in parliaments and democracy index\n",
     "\n",
-    "In order to run the correlation and produce some of the visualzations, the datasets need to be joined together into one dataframe."
+    "In order to run the correlation, the datasets need to be joined together into one dataframe. To do this, both datasets need to be reshaped (from wide to long) and both datasets need to have consistent columns to join on, in this case, country and year. As we started doing this, we realized that the datasets had different naming conventions for how they spell certain countries. For instance, one dataset had the US as the 'United States' and the other had it as 'United States of America'. This was true of many other countries as well. The file 'data/list_of_countries.csv' was obtained from [here](https://www.iban.com/country-codes) using pd.read_html(). The 'Country' column of this file will serve as our new standard for both datasets. Next, both datasets were manually inspected and variations in how the countries are spelled were added to the list_of_countries.csv file in the variations columns. Using this file and the custom function 'change_countries', we were able to convert the names of the countries to be consistent across both datasets, which allowed us to join them into one dataframe. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3112,9 +3123,10 @@
     "# groupby so that there is only one value for each year, get only lower house\n",
     "lower_house = women_in_parliments[['country','lower_single_house_percent_w','lower_single_house_elections_year']].groupby(['country','lower_single_house_elections_year']).apply(lambda x: x['lower_single_house_percent_w'].mean(skipna=False)).dropna().reset_index()\n",
     "lower_house = lower_house.rename({'lower_single_house_elections_year':'year',0:'lower_single_house_percent_w'},axis=1)\n",
-    "# take the mean across months so that there is only one value for each year, get only upper house\n",
+    "# groupby so that there is only one value for each year, get only upper house\n",
     "upper_house = women_in_parliments[['country','upper_house_senate_percent_w','upper_house_senate_elections_year']].groupby(['country','upper_house_senate_elections_year']).apply(lambda x: x['upper_house_senate_percent_w'].mean(skipna=False)).dropna().reset_index()\n",
     "upper_house = upper_house.rename({'upper_house_senate_elections_year':'year',0:'upper_house_senate_percent_w'},axis=1)\n",
+    "\n",
     "# merge upper and lower back together\n",
     "parliaments = lower_house.merge(upper_house,on=['country','year'], how='outer')\n",
     "\n",
@@ -3129,7 +3141,7 @@
     "countries['Variation3'] = countries['Variation3'].astype(str)\n",
     "countries_dict = countries.set_index('Country')[['Variation1','Variation2','Variation3']].to_dict(orient='index')\n",
     "\n",
-    "# make country names consistent\n",
+    "# make country names in both datasets consistent\n",
     "parliaments['country'] = parliaments['country'].apply(change_countries,args=(countries_dict,))\n",
     "democracy_index_melted['country'] = democracy_index_melted['country'].apply(change_countries,args=(countries_dict,))\n",
     "\n",
@@ -3233,7 +3245,7 @@
    "source": [
     "#### Correlation by region\n",
     "\n",
-    "There's a weak positive correlation between democracy index scores and the percent of women in government at a national level. What happens when we do this correlation by region, to account for possible regional differences such as different cultural expectations for women?"
+    "There's a weak, positive correlation between democracy index scores and the percent of women in government at a national level. What happens when we do this correlation by region, to account for possible regional differences such as different cultural expectations for women?"
    ]
   },
   {
@@ -3502,7 +3514,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, the relationships change when examined at a regional level. Some regions even have a negative correlation. "
+    "As you can see, the relationships change when examined at a regional level. Some regions even have a negative correlation. To examine this further, we will look at one correlation that stands out as surprising: North America showed a -0.97 correlation between the democracy score and the percent women in the upper house. I'll start by checking for missing data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "region                          0.00000\n",
+       "2022_rank                       0.00000\n",
+       "country                         0.00000\n",
+       "regime_type                     0.00000\n",
+       "five_year_mean                  0.00000\n",
+       "year                            0.00000\n",
+       "democracy_index_score           0.00000\n",
+       "lower_single_house_percent_w    0.62500\n",
+       "upper_house_senate_percent_w    0.78125\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get the percent missing data in each column \n",
+    "df[df['region']=='North America'].isna().sum()/len(df[df['region']=='North America'])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The upper_house_senate_percent_w is misisng almost 80% of the data. This is likely partially because the US only holds Senate elections every 6 years. Given that each country has it's only timeline for elections and different types of governing bodies, it appears that we may not have enough data at the regional level to gain meaningful insights from these correlations. This is a surprising setback that we were not expecting. "
    ]
   },
   {
@@ -3710,6 +3760,14 @@
    "metadata": {},
    "source": [
     "## Analysis 4: Visualizing the relationship between democracy index scores and women in government by region, over time"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to get a better sense of the relationship between the democracy index and the percent women in legislative bodies and how this relationship changes over time, we will create an interactive scatter plot. However, because many governments do not have a upper house or have longer periods of time between elections in upper houses, this led to a high rate of missing data for this column (84% missing). Futhermore, we found that the percent women in upper houses showed a weak correlation of 0.18 to the democracy index (see correlation section above). For these reasons, we will focus this visualzation on the percent of women in lower houses only. "
    ]
   },
   {
@@ -8235,7 +8293,8 @@
     }
    ],
    "source": [
-    "# drop nas so that the plot works\n",
+    "# plot lower house\n",
+    "# drop upper house annas so that the plot works\n",
     "scatter_df = df.drop('upper_house_senate_percent_w',axis=1).dropna()\n",
     "# make figure\n",
     "fig = px.scatter(scatter_df, \n",
@@ -8255,27 +8314,16 @@
     "fig.update_xaxes(title_text='Democracy Index Score')\n",
     "fig.update_yaxes(title_text='Percent Women in Lower Legislative Branches')\n",
     "\n",
+    "# write to html file so that it can be added to the github\n",
+    "fig.write_html(\"visualizations/interactive_scatter.html\")\n",
+    "\n",
     "fig.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "my_env",
+   "display_name": "march_madness",
    "language": "python",
    "name": "python3"
   },
@@ -8289,12 +8337,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "08f2f00e6cff89f4db170e786f1e75d3bae72257b993589cab352390ae350181"
+    "hash": "88d01d1e0c2c835f87dc9b3d9c7e35a81ecc1bf830e697c265af2b372c490820"
    }
   }
  },
