added gif of the animations. not the best quality video

--- a/data_visualizations.ipynb
+++ b/data_visualizations.ipynb
@@ -28348,7 +28348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -32747,7 +32747,7 @@
              null,
              {
               "frame": {
-               "duration": 500,
+               "duration": 2000,
                "redraw": false
               },
               "fromcurrent": true,
@@ -32845,7 +32845,8 @@
     "\n",
     "fig.update_xaxes(title_text='Democracy Index Score')\n",
     "fig.update_yaxes(title_text='Percent Women in Lower Legislative Branches')\n",
-    "\n",
+    "fig.layout.updatemenus[0].buttons[0].args[1]['frame']['duration'] = 2000\n",
+    "# fig.layout.updatemenus[0].buttons[0].args[1]['transition']['duration'] = 25\n",
     "# write to html file so that it can be added to the github\n",
     "fig.write_html(\"visualizations/interactive_scatter.html\")\n",
     "\n",
