double checking that all notebooks work

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -63,17 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "^C\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# This line uses the script to pull in the data from the IPU website and save each file to a csv in the data/world_data/ folder. \n",
     "# It is commented out because we already ran this script and want to avoid unecessarily pulling from their website\n",
@@ -666,20 +658,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9828</th>\n",
-       "      <td>109</td>\n",
-       "      <td>Greece</td>\n",
-       "      <td>2019-07-01</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>0.210000</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9829</th>\n",
+       "      <th>9791</th>\n",
        "      <td>111</td>\n",
        "      <td>Cambodia</td>\n",
        "      <td>2018-07-01</td>\n",
@@ -692,7 +671,7 @@
        "      <td>0.161290</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9830</th>\n",
+       "      <th>9792</th>\n",
        "      <td>112</td>\n",
        "      <td>Kyrgyzstan</td>\n",
        "      <td>2021-11-01</td>\n",
@@ -705,7 +684,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9831</th>\n",
+       "      <th>9793</th>\n",
        "      <td>116</td>\n",
        "      <td>Mauritius</td>\n",
        "      <td>2019-11-01</td>\n",
@@ -718,7 +697,7 @@
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9832</th>\n",
+       "      <th>9794</th>\n",
        "      <td>118</td>\n",
        "      <td>Burkina Faso</td>\n",
        "      <td>2022-03-01</td>\n",
@@ -730,9 +709,22 @@
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9795</th>\n",
+       "      <td>143</td>\n",
+       "      <td>India</td>\n",
+       "      <td>2019-04-01</td>\n",
+       "      <td>542.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>0.149446</td>\n",
+       "      <td>2022-03-01</td>\n",
+       "      <td>237.0</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>0.139241</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9833 rows × 10 columns</p>\n",
+       "<p>9796 rows × 10 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -743,11 +735,11 @@
        "3       4   Netherlands                   1998-05-01   \n",
        "4       5        Norway                   2001-09-01   \n",
        "...   ...           ...                          ...   \n",
-       "9828  109        Greece                   2019-07-01   \n",
-       "9829  111      Cambodia                   2018-07-01   \n",
-       "9830  112    Kyrgyzstan                   2021-11-01   \n",
-       "9831  116     Mauritius                   2019-11-01   \n",
-       "9832  118  Burkina Faso                   2022-03-01   \n",
+       "9791  111      Cambodia                   2018-07-01   \n",
+       "9792  112    Kyrgyzstan                   2021-11-01   \n",
+       "9793  116     Mauritius                   2019-11-01   \n",
+       "9794  118  Burkina Faso                   2022-03-01   \n",
+       "9795  143         India                   2019-04-01   \n",
        "\n",
        "      lower_single_house_seats  lower_single_house_women  \\\n",
        "0                        349.0                     149.0   \n",
@@ -756,11 +748,11 @@
        "3                        150.0                      54.0   \n",
        "4                        165.0                      59.0   \n",
        "...                        ...                       ...   \n",
-       "9828                     300.0                      63.0   \n",
-       "9829                     125.0                      26.0   \n",
-       "9830                      88.0                      18.0   \n",
-       "9831                      70.0                      14.0   \n",
-       "9832                      71.0                      14.0   \n",
+       "9791                     125.0                      26.0   \n",
+       "9792                      88.0                      18.0   \n",
+       "9793                      70.0                      14.0   \n",
+       "9794                      71.0                      14.0   \n",
+       "9795                     542.0                      81.0   \n",
        "\n",
        "      lower_single_house_percent_w upper_house_senate_elections  \\\n",
        "0                         0.426934                          NaT   \n",
@@ -769,11 +761,11 @@
        "3                         0.360000                   1999-05-01   \n",
        "4                         0.357576                          NaT   \n",
        "...                            ...                          ...   \n",
-       "9828                      0.210000                          NaT   \n",
-       "9829                      0.208000                   2018-02-01   \n",
-       "9830                      0.204545                          NaT   \n",
-       "9831                      0.200000                          NaT   \n",
-       "9832                      0.197183                          NaT   \n",
+       "9791                      0.208000                   2018-02-01   \n",
+       "9792                      0.204545                          NaT   \n",
+       "9793                      0.200000                          NaT   \n",
+       "9794                      0.197183                          NaT   \n",
+       "9795                      0.149446                   2022-03-01   \n",
        "\n",
        "      upper_house_senate_seats  upper_house_senate_women  \\\n",
        "0                          0.0                       0.0   \n",
@@ -782,11 +774,11 @@
        "3                         75.0                      20.0   \n",
        "4                          0.0                       0.0   \n",
        "...                        ...                       ...   \n",
-       "9828                       0.0                       0.0   \n",
-       "9829                      62.0                      10.0   \n",
-       "9830                       0.0                       0.0   \n",
-       "9831                       0.0                       0.0   \n",
-       "9832                       0.0                       0.0   \n",
+       "9791                      62.0                      10.0   \n",
+       "9792                       0.0                       0.0   \n",
+       "9793                       0.0                       0.0   \n",
+       "9794                       0.0                       0.0   \n",
+       "9795                     237.0                      33.0   \n",
        "\n",
        "      upper_house_senate_percent_w  \n",
        "0                              NaN  \n",
@@ -795,13 +787,13 @@
        "3                         0.266667  \n",
        "4                              NaN  \n",
        "...                            ...  \n",
-       "9828                           NaN  \n",
-       "9829                      0.161290  \n",
-       "9830                           NaN  \n",
-       "9831                           NaN  \n",
-       "9832                           NaN  \n",
+       "9791                      0.161290  \n",
+       "9792                           NaN  \n",
+       "9793                           NaN  \n",
+       "9794                           NaN  \n",
+       "9795                      0.139241  \n",
        "\n",
-       "[9833 rows x 10 columns]"
+       "[9796 rows x 10 columns]"
       ]
      },
      "execution_count": 11,
@@ -1253,7 +1245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "milestone1",
+   "display_name": "milestone",
    "language": "python",
    "name": "python3"
   },
@@ -1267,12 +1259,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "a23322d535482f71618cbdd3ed8f86a1f1cff9a935422214cedb9783ad801556"
+    "hash": "e88d77a533e468db4459a08c07b20b669a35900c4fb2de4358367f7efc457a73"
    }
   }
  },
